[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bench]
app_name = "warehouse_control"
app_version = "1.0.0"
app_title = "Warehouse Control"
app_description = "Building-based warehouse access control for ERPNext"
app_publisher = "Your Company"
app_email = "your-email@company.com"
app_license = "MIT"
required_erpnext_version = ">=15.0.0"  # Add this line

[project]
name = "warehouse_control"
version = "1.0.0"
description = "Building-based warehouse access control for ERPNext"
authors = [
    {name = "Your Company", email = "your-email@company.com"}
]
license = {text = "MIT"}
