[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse_control"
version = "1.0.0"
description = "Building-based warehouse access control for ERPNext"
authors = [
    {name = "Aravind", email = "aravindsprint@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["warehouse_control*"]

[tool.bench]
app_name = "warehouse_control"
app_version = "1.0.0"
app_title = "Warehouse Control"
app_description = "Building-based warehouse access control for ERPNext"
app_publisher = "Aravind"
app_email = "aravindsprint@gmail.com"
app_license = "MIT"
required_erpnext_version = ">=15.0.0"